Revamp index.html for TestTea website
Updated the HTML structure and content for the TestTea website, including language change, title, meta tags, and added styling.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,141 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Test ExoClick</title>
+  <meta charset="UTF-8" />
+  <title>TestTea – Video & Entertainment</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="TestTea is an entertainment website featuring trending videos and media content." />
 
-  <!-- VERIFIKASI EXOCLICK DI SINI -->
-  <meta name="6a97888e-site-verification" content="a66083797fc20ef55c93e62a023940a2">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #0f0f0f;
+      color: #fff;
+    }
 
+    header {
+      padding: 16px 24px;
+      background: #181818;
+      border-bottom: 1px solid #333;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 22px;
+    }
+
+    nav {
+      margin-top: 8px;
+      font-size: 14px;
+    }
+
+    nav a {
+      color: #bbb;
+      margin-right: 12px;
+      text-decoration: none;
+    }
+
+    nav a:hover {
+      color: #fff;
+    }
+
+    main {
+      padding: 24px;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+      gap: 16px;
+    }
+
+    .card {
+      background: #1c1c1c;
+      border-radius: 8px;
+      overflow: hidden;
+    }
+
+    .thumb {
+      width: 100%;
+      aspect-ratio: 16 / 9;
+      background: #333;
+    }
+
+    .content {
+      padding: 12px;
+    }
+
+    .title {
+      font-size: 15px;
+      font-weight: bold;
+      margin-bottom: 6px;
+    }
+
+    .desc {
+      font-size: 13px;
+      color: #aaa;
+    }
+
+    footer {
+      padding: 24px;
+      text-align: center;
+      font-size: 13px;
+      color: #888;
+      border-top: 1px solid #333;
+      margin-top: 40px;
+    }
+
+    footer a {
+      color: #888;
+      margin: 0 8px;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      color: #fff;
+    }
+  </style>
 </head>
 <body>
-  <h1>Website Test ExoClick</h1>
-  <p>Ini hanya untuk verifikasi.</p>
+
+<header>
+  <h1>TestTea</h1>
+  <nav>
+    <a href="/">Home</a>
+    <a href="/privacy.html">Privacy</a>
+    <a href="/terms.html">Terms</a>
+    <a href="/contact.html">Contact</a>
+  </nav>
+</header>
+
+<main>
+  <h2>Trending Videos</h2>
+
+  <div class="grid">
+    <!-- 12 dummy cards -->
+    <div class="card"><div class="thumb"></div><div class="content"><div class="title">Trending Video #1</div><div class="desc">Popular entertainment content.</div></div></div>
+    <div class="card"><div class="thumb"></div><div class="content"><div class="title">Trending Video #2</div><div class="desc">Latest viral media.</div></div></div>
+    <div class="card"><div class="thumb"></div><div class="content"><div class="title">Trending Video #3</div><div class="desc">Top viewed clip today.</div></div></div>
+    <div class="card"><div class="thumb"></div><div class="content"><div class="title">Trending Video #4</div><div class="desc">Entertainment highlights.</div></div></div>
+    <div class="card"><div class="thumb"></div><div class="content"><div class="title">Trending Video #5</div><div class="desc">Hot content right now.</div></div></div>
+    <div class="card"><div class="thumb"></div><div class="content"><div class="title">Trending Video #6</div><div class="desc">Most watched today.</div></div></div>
+    <div class="card"><div class="thumb"></div><div class="content"><div class="title">Trending Video #7</div><div class="desc">Entertainment feed.</div></div></div>
+    <div class="card"><div class="thumb"></div><div class="content"><div class="title">Trending Video #8</div><div class="desc">Featured media content.</div></div></div>
+    <div class="card"><div class="thumb"></div><div class="content"><div class="title">Trending Video #9</div><div class="desc">Popular clips.</div></div></div>
+    <div class="card"><div class="thumb"></div><div class="content"><div class="title">Trending Video #10</div><div class="desc">Latest entertainment.</div></div></div>
+    <div class="card"><div class="thumb"></div><div class="content"><div class="title">Trending Video #11</div><div class="desc">Viral media update.</div></div></div>
+    <div class="card"><div class="thumb"></div><div class="content"><div class="title">Trending Video #12</div><div class="desc">Community favorites.</div></div></div>
+  </div>
+</main>
+
+<footer>
+  © 2026 TestTea  
+  <br />
+  <a href="/privacy.html">Privacy Policy</a> |
+  <a href="/terms.html">Terms of Service</a> |
+  <a href="/contact.html">Contact</a>
+</footer>
+
 </body>
 </html>
